--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
-
+# Don't track content of these file and folders
 # compiled output
 /dist
 /dist-server
