--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "bootstrap": "^4.1.3",
     "core-js": "^2.4.1",
     "firebase": "^4.2.0",
+    "font-awesome": "^4.7.0",
+    "ng-spinner": "^1.0.6",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
