--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "@ng-bootstrap/ng-bootstrap": "2.0.0",
+    "angular5-data-table": "^1.0.3",
     "angularfire2": "^4.0.0-rc.1",
     "bootstrap": "^4.1.0",
     "core-js": "^2.4.1",
